added note on possible log4j conflict when running the installer
git-svn-id: https://eclim.svn.sourceforge.net/svnroot/eclim/trunk@1980 b5bd0a2e-1a23-0410-8567-9814cbbba304